--- a/src/Views/AccountSetting/accountsetting.fxml
+++ b/src/Views/AccountSetting/accountsetting.fxml
@@ -14,33 +14,27 @@
    <children>
       <AnchorPane layoutX="179.0" layoutY="61.0" prefHeight="613.0" prefWidth="921.0" style="-fx-background-color: #E5E9F1;" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="179.0" AnchorPane.rightAnchor="179.66666666666663" AnchorPane.topAnchor="61.0">
          <children>
-            <AnchorPane layoutX="294.0" layoutY="70.0" prefHeight="458.0" prefWidth="506.0" style="-fx-background-color: FFFFFF; -fx-background-radius: 12px;" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="294.0" AnchorPane.rightAnchor="121.33333333333337" AnchorPane.topAnchor="70.0">
+            <AnchorPane layoutX="294.0" layoutY="87.0" prefHeight="452.0" prefWidth="506.0" style="-fx-background-color: FFFFFF; -fx-background-radius: 12px;" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="294.0" AnchorPane.rightAnchor="121.0" AnchorPane.topAnchor="87.0">
                <children>
-                  <TextField fx:id="fullnameTF" layoutX="88.0" layoutY="95.0" prefHeight="27.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="88.0" />
-                  <TextField fx:id="pwdTF" layoutX="88.0" layoutY="159.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="88.0" />
-                  <TextField fx:id="confirmpwdTF" layoutX="88.0" layoutY="216.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="88.0" />
-                  <TextField fx:id="emailTF" layoutX="90.0" layoutY="337.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="90.0" />
-                  <Label layoutX="86.0" layoutY="65.0" style="-fx-font-family: Poppins;" text="Full Name" textFill="#374a8f">
+                  <TextField fx:id="pwdTF" layoutX="82.0" layoutY="94.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="82.0" />
+                  <TextField fx:id="confirmpwdTF" layoutX="81.0" layoutY="169.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="81.0" />
+                  <TextField fx:id="emailTF" layoutX="81.0" layoutY="327.0" prefHeight="25.0" prefWidth="296.0" style="-fx-background-color: FFFFFF; -fx-border-color: #DBE5EA; -fx-border-width: 0px 0px 1px 0px;" AnchorPane.leftAnchor="81.0" />
+                  <Label layoutX="86.0" layoutY="64.0" text="Password" textFill="#374a8f">
                      <font>
                         <Font name="Yu Gothic Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="88.0" layoutY="133.0" text="Password" textFill="#374a8f">
+                  <Label layoutX="86.0" layoutY="140.0" text="Confirm Password" textFill="#374a8f">
                      <font>
                         <Font name="Yu Gothic Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="87.0" layoutY="194.0" text="Confirm Password" textFill="#374a8f">
+                  <Label layoutX="86.0" layoutY="215.0" text="Age" textFill="#374a8f">
                      <font>
                         <Font name="Yu Gothic Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="88.0" layoutY="253.0" text="Age" textFill="#374a8f">
-                     <font>
-                        <Font name="Yu Gothic Bold" size="16.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="86.0" layoutY="315.0" text="Email Address" textFill="#374a8f">
+                  <Label layoutX="86.0" layoutY="292.0" text="Email Address" textFill="#374a8f">
                      <font>
                         <Font name="Yu Gothic Bold" size="16.0" />
                      </font>
@@ -50,27 +44,22 @@
                         <Font name="Tahoma Bold" size="17.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="20.0" fitWidth="29.0" layoutX="374.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="20.0" fitWidth="21.0" layoutX="366.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="366.0" AnchorPane.rightAnchor="120.33333333333337">
                      <image>
                         <Image url="@note.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="20.0" fitWidth="21.0" layoutX="374.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="376.0" AnchorPane.rightAnchor="110.0">
+                  <ImageView fitHeight="20.0" fitWidth="21.0" layoutX="366.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="366.0" AnchorPane.rightAnchor="120.33333333333337">
                      <image>
                         <Image url="@note.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="20.0" fitWidth="21.0" layoutX="374.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="376.0" AnchorPane.rightAnchor="110.0">
+                  <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="366.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@note.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="376.0" layoutY="340.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@note.png" />
-                     </image>
-                  </ImageView>
-                  <DatePicker fx:id="ageDP" layoutX="84.0" layoutY="281.0" prefHeight="26.0" prefWidth="311.0" />
+                  <DatePicker fx:id="ageDP" layoutX="81.0" layoutY="250.0" prefHeight="25.0" prefWidth="296.0" AnchorPane.leftAnchor="81.0" />
                   <Label fx:id="noticeLabel" layoutX="23.0" layoutY="386.0" prefHeight="18.0" prefWidth="144.0" text="message label" />
                </children>
             </AnchorPane>
