--- a/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
+++ b/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="720.0" maxWidth="1280.0" prefHeight="720" prefWidth="1280" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeScreenController.UserScreenController">
    <children>
@@ -12,10 +14,19 @@
             <Image url="@background.png" />
          </image>
       </ImageView>
-      <Button id="btnOrder" fx:id="donhangBtn" layoutX="185.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnCheck" fx:id="pheduyetycBtn" layoutX="517.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnAnalysis" fx:id="thongkeBtn" layoutX="846.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnOrder" fx:id="donhangBtn" layoutX="350.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnAnalysis" fx:id="thongkeBtn" layoutX="681.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
       <Button id="btnProduct" fx:id="productBtn" layoutX="350.0" layoutY="381.0" mnemonicParsing="false" onAction="#productBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
       <Button id="btnAccount" fx:id="accountsettingBtn" layoutX="681.0" layoutY="381.0" mnemonicParsing="false" onAction="#AccountSettingBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <ImageView fitHeight="57.0" fitWidth="54.0" layoutX="1190.0" layoutY="628.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../WarehouseLauncher/signout.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="1181.0" layoutY="682.0" text="Sign out" textFill="WHITE">
+         <font>
+            <Font name="Tahoma" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
