--- a/src/Views/ProductManagement/product_management.fxml
+++ b/src/Views/ProductManagement/product_management.fxml
@@ -32,27 +32,27 @@
             <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="93.0" text="Số lượng" />
         </columns>
       </TableView>
-      <TextField fx:id="addnumspTF" layoutX="859.0" layoutY="480.0" prefHeight="47.0" prefWidth="236.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
+      <TextField fx:id="addnumspTF" layoutX="859.0" layoutY="480.0" prefHeight="47.0" prefWidth="265.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button fx:id="addBtn" layoutX="1105.0" layoutY="482.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="152.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm vào giỏ" textFill="WHITE">
+      <Button fx:id="addBtn" layoutX="1136.0" layoutY="482.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm vào giỏ" textFill="WHITE">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="backhomeBtn" layoutX="1144.0" layoutY="648.0" mnemonicParsing="false" onAction="#backhomeBtnAction" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
+      <Button fx:id="backhomeBtn" layoutX="1135.0" layoutY="648.0" mnemonicParsing="false" onAction="#backhomeBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="#f8f8f8">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1166.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1143.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="cartBtn" fitHeight="58.0" fitWidth="49.0" layoutX="741.0" layoutY="17.0" onMouseClicked="#cartBtnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="cartBtn" fitHeight="60.0" fitWidth="51.0" layoutX="741.0" layoutY="17.0" onMouseClicked="#cartBtnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@2x/2x/cart@2x.png" />
          </image>
@@ -81,7 +81,12 @@
          <font>
             <Font name="Segoe UI" size="12.0" />
          </font></Label>
-      <Button fx:id="addNewProductBtn" layoutX="615.0" layoutY="661.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm sản phẩm mới" textFill="#454eff">
+      <Button fx:id="addNewProductBtn" layoutX="615.0" layoutY="661.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm sản phẩm" textFill="#454eff">
+         <font>
+            <Font name="Tahoma" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="addNewProductBtn1" layoutX="417.0" layoutY="661.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Xóa sản phẩm" textFill="#ff4747">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
