--- a/src/Views/Cart/cart_management.fxml
+++ b/src/Views/Cart/cart_management.fxml
@@ -16,12 +16,12 @@
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <Button fx:id="importBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
+      <Button fx:id="ycnhapBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TableView fx:id="chitietyc_tv" layoutX="46.0" layoutY="96.0" prefHeight="528.0" prefWidth="735.0" stylesheets="@tableview.css">
+      <TableView fx:id="chitietycTV" layoutX="46.0" layoutY="96.0" prefHeight="528.0" prefWidth="735.0" stylesheets="@tableview.css">
         <columns>
           <TableColumn fx:id="idspCol" prefWidth="49.0" text="ID" />
           <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="335.0" text="Tên sản phẩm" />
@@ -30,25 +30,25 @@
             <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="93.0" text="Số lượng" />
         </columns>
       </TableView>
-      <Button fx:id="backhomeBtn" layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
+      <Button fx:id="backBtn" layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" onAction="#backBtnAction" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1166.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="backBtnbackBtn" fitHeight="25.0" fitWidth="25.0" layoutX="1166.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <Button fx:id="exportBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
+      <Button fx:id="ycxuatBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TextField layoutX="1045.0" layoutY="143.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField layoutX="1045.0" layoutY="200.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField layoutX="1045.0" layoutY="254.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <Button fx:id="exportBtn1" layoutX="31.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Bỏ sản phẩm" textFill="#ff4747">
+      <TextField fx:id="tenkhTF" layoutX="1045.0" layoutY="143.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="sdtkhTF" layoutX="1045.0" layoutY="200.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="diachikhTF" layoutX="1045.0" layoutY="254.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <Button layoutX="31.0" layoutY="661.0" mnemonicParsing="false" onAction="#xoaBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Bỏ sản phẩm" textFill="#ff4747" fx:id="xoaspBtn">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
