--- a/src/Views/HomeScreen/AdminLauncher/admin_launcher.fxml
+++ b/src/Views/HomeScreen/AdminLauncher/admin_launcher.fxml
@@ -20,7 +20,7 @@
       <Button id="btnCustomer" fx:id="nhansuBtn" layoutX="185.0" layoutY="382.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@admin_launcher_style.css" />
       <Button id="btnProduct" fx:id="sanphamBtn" layoutX="515.0" layoutY="382.0" mnemonicParsing="false" onAction="#productBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@admin_launcher_style.css" />
       <Button id="btnAccount" fx:id="accountsettingBtn" layoutX="846.0" layoutY="382.0" mnemonicParsing="false" onAction="#AccountSettingBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@admin_launcher_style.css" />
-      <ImageView fitHeight="57.0" fitWidth="54.0" layoutX="1190.0" layoutY="627.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="signoutBtn" fitHeight="57.0" fitWidth="54.0" layoutX="1190.0" layoutY="627.0" onMouseClicked="#signoutBtnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../WarehouseLauncher/signout.png" />
          </image>
