--- a/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
+++ b/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
@@ -18,7 +18,7 @@
       <Button id="btnAnalysis" fx:id="thongkeBtn" layoutX="681.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
       <Button id="btnProduct" fx:id="productBtn" layoutX="350.0" layoutY="381.0" mnemonicParsing="false" onAction="#productBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
       <Button id="btnAccount" fx:id="accountsettingBtn" layoutX="681.0" layoutY="381.0" mnemonicParsing="false" onAction="#AccountSettingBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <ImageView fitHeight="57.0" fitWidth="54.0" layoutX="1190.0" layoutY="628.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="signoutBtn" fitHeight="57.0" fitWidth="54.0" layoutX="1190.0" layoutY="628.0" onMouseClicked="#signoutBtnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../WarehouseLauncher/signout.png" />
          </image>
