--- a/src/Views/ProductManagement/product_management.fxml
+++ b/src/Views/ProductManagement/product_management.fxml
@@ -81,7 +81,7 @@
          <font>
             <Font name="Segoe UI" size="12.0" />
          </font></Label>
-      <Button fx:id="addNewProductBtn" layoutX="615.0" layoutY="661.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm sản phẩm" textFill="#454eff">
+      <Button fx:id="addNewProductBtn" layoutX="615.0" layoutY="661.0" mnemonicParsing="false" onAction="#addNewProductBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm sản phẩm" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
