--- a/src/Views/Cart/cart_management.fxml
+++ b/src/Views/Cart/cart_management.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,7 +17,7 @@
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <Button fx:id="ycnhapBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
+      <Button fx:id="ycnhapBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" onAction="#ycnhapBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
@@ -40,7 +41,7 @@
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <Button fx:id="ycxuatBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
+      <Button fx:id="ycxuatBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" onAction="#ycxuatBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
@@ -53,5 +54,6 @@
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
+      <Label fx:id="messageLabel" layoutX="259.0" layoutY="660.0" prefHeight="35.0" prefWidth="223.0" text="notice label" />
    </children>
 </AnchorPane>
