--- a/src/Views/Order/product_management.fxml
+++ b/src/Views/Order/product_management.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,13 +16,14 @@
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <TableView fx:id="tablesanpham" layoutX="49.0" layoutY="103.0" onMouseClicked="#tablesanphamAction" prefHeight="582.0" prefWidth="723.0" stylesheets="@tableview.css">
+      <TableView fx:id="tablesanpham" layoutX="49.0" layoutY="96.0" onMouseClicked="#tablesanphamAction" prefHeight="546.0" prefWidth="723.0" stylesheets="@tableview.css">
         <columns>
           <TableColumn fx:id="idspCol" prefWidth="49.0" text="ID" />
-          <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="228.0" text="Tên khách hàng" />
-            <TableColumn fx:id="loaispCol" minWidth="0.0" prefWidth="156.0" text="Tên người yêu cầu" />
-            <TableColumn fx:id="giaspCol" minWidth="0.0" prefWidth="150.0" text="Loại đơn" />
-            <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="151.0" text="Ngày yêu cầu" />
+          <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="153.0" text="Tên khách hàng" />
+            <TableColumn fx:id="loaispCol" minWidth="0.0" prefWidth="149.0" text="Tên người yêu cầu" />
+            <TableColumn fx:id="giaspCol" minWidth="0.0" prefWidth="153.0" text="Loại đơn" />
+            <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="124.0" text="Ngày yêu cầu" />
+            <TableColumn fx:id="numspCol2" minWidth="0.0" prefWidth="94.0" text="Trạng thái" />
         </columns>
       </TableView>
       <Button fx:id="backhomeBtn" layoutX="1135.0" layoutY="648.0" mnemonicParsing="false" onAction="#backhomeBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="#f8f8f8">
@@ -34,14 +36,23 @@
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <TableView fx:id="tablesanpham1" layoutX="831.0" layoutY="130.0" onMouseClicked="#tablesanphamAction" prefHeight="500.0" prefWidth="446.0" stylesheets="@tableview.css">
+      <TableView fx:id="tablesanpham1" layoutX="847.0" layoutY="108.0" onMouseClicked="#tablesanphamAction" prefHeight="532.0" prefWidth="417.0" stylesheets="@tableview.css">
          <columns>
             <TableColumn fx:id="idspCol1" prefWidth="49.0" text="ID" />
-            <TableColumn fx:id="tenspCol1" minWidth="0.0" prefWidth="136.0" text="Tên sản phẩm" />
-            <TableColumn fx:id="loaispCol1" minWidth="0.0" prefWidth="98.0" text="Loại sản phẩm" />
-            <TableColumn fx:id="giaspCol1" minWidth="0.0" prefWidth="69.0" text="Số lượng" />
-            <TableColumn fx:id="numspCol1" minWidth="0.0" prefWidth="91.0" text="Tổng giá" />
+            <TableColumn fx:id="tenspCol1" minWidth="0.0" prefWidth="179.0" text="Tên sản phẩm" />
+            <TableColumn fx:id="loaispCol1" minWidth="0.0" prefWidth="100.0" text="Loại sản phẩm" />
+            <TableColumn fx:id="giaspCol1" minWidth="0.0" prefWidth="91.0" text="Số lượng" />
          </columns>
       </TableView>
+      <TextField fx:id="searchTF" layoutX="25.0" layoutY="666.0" prefHeight="41.0" prefWidth="619.0" promptText="Đơn hàng" style="-fx-background-color: #fff;">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <Button layoutX="650.0" layoutY="666.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="145.0" style="-fx-background-color: #fff;" text="Tìm kiếm" textFill="#454eff">
+         <font>
+            <Font name="Tahoma" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
