create controller for order screen

--- a/src/Views/OrderScreen/order.fxml
+++ b/src/Views/OrderScreen/order.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OrderController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OrderManagement.OrderController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1314.0" pickOnBounds="true" preserveRatio="true">
          <image>
