design cac chuc nang cua table

--- a/src/Views/RequestScreen/request.fxml
+++ b/src/Views/RequestScreen/request.fxml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OrderManagement.OrderController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.RequestController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1314.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <TableView fx:id="tablesorder" layoutX="49.0" layoutY="96.0" onMouseClicked="#tableorderAction" prefHeight="546.0" prefWidth="723.0" stylesheets="@tableview.css">
+      <TableView fx:id="tablesorder" layoutX="35.0" layoutY="96.0" onMouseClicked="#tableorderAction" prefHeight="552.0" prefWidth="746.0" stylesheets="@tableview.css">
         <columns>
-          <TableColumn fx:id="id_orderCol" prefWidth="49.0" text="ID" />
-          <TableColumn fx:id="name_cusCol" minWidth="0.0" prefWidth="153.0" text="Tên khách hàng" />
-            <TableColumn fx:id="fullname_userCol" minWidth="0.0" prefWidth="149.0" text="Tên người yêu cầu" />
-            <TableColumn fx:id="type_ordCol" minWidth="0.0" prefWidth="153.0" text="Loại đơn" />
-            <TableColumn fx:id="date_ordCol" minWidth="0.0" prefWidth="124.0" text="Ngày yêu cầu" />
-            <TableColumn fx:id="state_ordCol" minWidth="0.0" prefWidth="94.0" text="Trạng thái" />
+          <TableColumn fx:id="id_orderCol" prefWidth="103.99999618530273" text="ID" />
+          <TableColumn fx:id="name_cusCol" minWidth="0.0" prefWidth="143.1999969482422" text="Tên khách hàng" />
+            <TableColumn fx:id="fullname_userCol" minWidth="0.0" prefWidth="184.800048828125" text="Tên người yêu cầu" />
+            <TableColumn fx:id="type_ordCol" minWidth="0.0" prefWidth="131.199951171875" text="Loại đơn" />
+            <TableColumn fx:id="date_ordCol" minWidth="0.0" prefWidth="185.60003662109375" text="Ngày yêu cầu" />
         </columns>
       </TableView>
       <Button fx:id="backhomeBtn" layoutX="1135.0" layoutY="648.0" mnemonicParsing="false" onAction="#backhomeBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="#f8f8f8">
@@ -44,10 +43,16 @@
             <TableColumn fx:id="num_reqCol" minWidth="0.0" prefWidth="91.0" text="Số lượng" />
          </columns>
       </TableView>
-      <TextField fx:id="searchTF" layoutX="25.0" layoutY="666.0" prefHeight="41.0" prefWidth="619.0" promptText="Tìm kiếm đơn hàng (theo tên người yêu cầu)" style="-fx-background-color: #fff;">
+      <Button fx:id="acceptBtn" layoutX="651.0" layoutY="669.0" mnemonicParsing="false" onAction="#acceptBtnAction" prefHeight="41.0" prefWidth="145.0" style="-fx-background-color: #fff;" text="Chấp thuận" textFill="#454eff">
          <font>
-            <Font size="15.0" />
+            <Font name="Tahoma" size="16.0" />
          </font>
-      </TextField>
+      </Button>
+      <Button fx:id="denyBtn" layoutX="492.0" layoutY="669.0" mnemonicParsing="false" onAction="#denyBtnAction" prefHeight="41.0" prefWidth="145.0" style="-fx-background-color: #fff;" text="Từ chối" textFill="#ff4747">
+         <font>
+            <Font name="Tahoma" size="16.0" />
+         </font>
+      </Button>
+      <Label fx:id="noticelabel" layoutX="103.0" layoutY="673.0" prefHeight="34.0" prefWidth="275.0" text="notice label" />
    </children>
 </AnchorPane>
