--- a/src/Views/StaffManagement/AddStaffDialog/addStaffDialog.fxml
+++ b/src/Views/StaffManagement/AddStaffDialog/addStaffDialog.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,18 +17,23 @@
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <Button fx:id="reportBtn" layoutX="176.0" layoutY="601.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="148.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm nhân viên" textFill="#454eff">
+      <Button fx:id="addBtn" layoutX="176.0" layoutY="607.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="148.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Thêm nhân viên" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <TextField fx:id="sdtkhTF" layoutX="225.0" layoutY="175.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="sdtkhTF1" layoutX="225.0" layoutY="229.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="sdtkhTF11" layoutX="225.0" layoutY="284.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="sdtkhTF111" layoutX="225.0" layoutY="338.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="sdtkhTF111111" layoutX="225.0" layoutY="495.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <ComboBox layoutX="225.0" layoutY="389.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="usernameTf" layoutX="225.0" layoutY="175.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="passTf" layoutX="225.0" layoutY="229.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="confirmTf" layoutX="225.0" layoutY="284.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="nameTf" layoutX="225.0" layoutY="338.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="emailTf" layoutX="225.0" layoutY="495.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <ComboBox fx:id="roleCb" layoutX="225.0" layoutY="389.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
       <TextField fx:id="sdtkhTF1111" layoutX="225.0" layoutY="443.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <DatePicker layoutX="231.0" layoutY="446.0" prefHeight="34.0" prefWidth="212.0" style="-fx-background-color: transparent;" stylesheets="@datepicker.css" />
+      <DatePicker fx:id="dateDp" layoutX="231.0" layoutY="446.0" prefHeight="34.0" prefWidth="212.0" style="-fx-background-color: transparent;" stylesheets="@datepicker.css" />
+      <Label fx:id="noticeLb" layoutX="161.0" layoutY="572.0" prefHeight="35.0" prefWidth="178.0" text="Thêm nhân viên thành công!" textFill="#f5f5f5">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
